2001-08-22  Tim Van Holder  <tim.van.holder@pandora.be>

	* m4/missing.m4: Require AM_AUX_DIR_EXPAND and use $am_aux_dir.

2001-08-18  Tom Tromey  <tromey@redhat.com>

	* automake.texi (Dist): Mention dist-all.

2001-08-11  Tom Tromey  <tromey@redhat.com>

	* configure.in: Upped to version 1.4m.

	* configure.in: Released 1.4l.

	* lib/config.guess, lib/config.sub: New versions from FSF.

2001-08-09  Richard Boulton <richard@tartarus.org>

	* automake.in (handle_single_transform_list): Use new global,
	`%linkers_used', to store the linkers used, rather than an internal
	variable.  Enables correct linker to be calculated across a group
	of calls to &handle_single_transform_list.  Return only list of
	objects, since linker to be used is now externally determined.
	(handle_source_transform): adapted for new calling conventions of
	handle_single_transform_list.  Calls resolve_linker() on a set of
	all the linkers used for any prefix, rather than for each prefix in
	turn.
	(linkers_used): New global.
	* tests/link_dist.test: New test.
	* tests/Makefile.am (TESTS): Added link_dist.test.

2001-08-08  Raja R Harinath  <harinath@cs.umn.edu>

	Dissociate testsuite 'make' invocations from outer 'make'.
	* tests/defs: Unset the MFLAGS, MAKEFLAGS and MAKELEVEL
	environment variables.
	* tests/cond16.test: Use '$MAKE -s', and avoid GNU make
	dependency. 
	* tests/substref.test: Likewise.

2001-08-08  Richard Boulton <richard@tartarus.org>

	* tests/cond18.test: New file.
	* tests/cond19.test: New file.
	* tests/cond20.test: New file.
	* tests/cond4.test: Updated to check the generated _OBJECTS more
	thoroughly.
	* tests/Makefile.am (TESTS): Added cond18.test, cond19.test and
	cond20.test

2001-08-08  Richard Boulton <richard@tartarus.org>

	* automake.in (file_contents_internal): if a rule is conditionally
	defined, define the standard automake definition for it for those
	conditions which are not conditionally defined.