@@ -5054,7 +5054,7 @@ sub lang_yacc_target_hook
 	# Add a dependency for the generated header file, and arrange
 	# for that file to be included in the distribution.
 	# FIXME: this fails for `nodist_*_SOURCES'.
-	$output_rules .= "${header}: $input\n";
+	$output_rules .= "${header}: $output\n";
 	&push_dist_common ($header);
 	# If the files are built in the build directory, then we want
 	# to remove them with `make clean'.  If they are in srcdir
