@@ -32,10 +32,6 @@ else !%?MORE-THAN-ONE%
 endif !%?MORE-THAN-ONE%
 
 ## Also generate a dependency for the .h file.
-## FIXME: does this sort of suffix rule really work?
-if %?GENERIC%
-.%EXT%.h:
-	@:
-else !%?GENERIC%
-%BASE%.h: %SOURCE%
+if !%?GENERIC%
+%BASE%.h: %OBJ%
 endif !%?GENERIC%
