@@ -1,0 +1,42 @@
+#! /bin/sh
+
+# Test to make sure dependencies are generated correctly for .h files.
+# Report from Richard Boulton.
+
+. $srcdir/defs || exit 1
+
+$needs_gnu_make
+$needs_autoconf
+
+cat > configure.in << 'END'
+AC_INIT
+AM_INIT_AUTOMAKE(nonesuch, nonesuch)
+AC_PROG_INSTALL
+AC_PROG_MAKE_SET
+AC_PROG_CC
+AC_PROG_YACC
+AC_OUTPUT(Makefile)
+END
+
+cat > Makefile.am << 'END'
+bin_PROGRAMS = foo
+foo_SOURCES = foo.y
+AM_YFLAGS = -d
+END
+
+cat > foo.y << 'END'
+%%
+WORD: "up";
+%%
+END
+
+$ACLOCAL || exit 1
+$AUTOMAKE -a || exit 1
+$AUTOCONF || exit 1
+./configure || exit 1
+
+$MAKE foo.h || exit 1
+
+test -e foo.h || exit 1
+
+exit 0
