@@ -1,4 +1,4 @@
-@set UPDATED 2 August 2001
+@set UPDATED 18 August 2001
 @set UPDATED-MONTH August 2001
 @set EDITION 1.4m
 @set VERSION 1.4m
