@@ -1,3 +1,13 @@
+2001-08-22  Richard Boulton <richard@tartarus.org>
+	    Tom Tromey  <tromey@redhat.com>
+
+	* automake.in (lang_yacc_target_hook): Make header file depend on
+	.c file, not .y file.
+	* lib/am/yacc.am: Non-generic rule changed to depend on %OBJ% (the
+	.c file) rather than %SOURCE% (the .y file)  Removed `.y.h' rule.
+	* tests/yacc7.test: New file.
+	* tests/Makefile.am (TESTS): Added yacc7.test.
+
 2001-08-22  Tim Van Holder  <tim.van.holder@pandora.be>
 
 	* m4/missing.m4: Require AM_AUX_DIR_EXPAND and use $am_aux_dir.
